# ai-opportunity-assistant

./: .env.example  .flake8  .gitignore  README.md  activity_type.jsonl  pyproject.toml  pytest.ini  stage.jsonl  test_slack_channels.py
docs/: API仕様.md  API設計.md  CI_CD設計方針.md  DB仕様.md  DB設計.md  スケジューラー設計方針.md  テスト設計方針.md  ログ設計方針.md  設定管理方針.md  認証認可設計方針.md  開発ワークフロー設計.md
docs/cline/: custom-instruction.txt  custom-instruction_ja.md
docs/spec/: API仕様.md  要件定義.md
docs/system-design/: ディレクトリ構成＆依存関係ルール.md  トランザクション管理方針.md  技術選定.md
memory-bank/: activeContext.md  branch-tasks_api-endpoints-implementation.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check_dependencies.py  lint.py
src/: __init__.py  main.py
src/agents/: __init__.py
src/api/: api.py  schemas.py
src/api/routes/: __init__.py  activity_routes.py  notification_routes.py  opportunity_routes.py  slack_routes.py
src/core/: config.py  logger.py
src/db/: __init__.py  session.py
src/models/: __init__.py  base.py  entity.py  master.py
src/scheduler/: __init__.py  task_runner.py
src/services/: __init__.py  activity_service.py  db_service.py  notification_service.py  opportunity_service.py  slack_service.py
src/slack/: __init__.py  bot.py  handlers.py  models.py
tasks/: README.md  branch-tasks_api-endpoints-implementation.md  branch-tasks_sqlite-integration-test-setup.md
tests/: README.md  api_test.py  conftest.py
tests/api/: test_activity_routes.py  test_notification_routes.py  test_opportunity_routes.py  test_slack_routes.py
tests/scheduler/: test_task_runner.py
tests/services/: __init__.py  test_activity_service.py  test_notification_service.py  test_notification_service_extended.py  test_opportunity_service.py  test_slack_bot.py  test_slack_handlers.py
tests/utils/: __init__.py
