[tool.poetry]
name = "ai-opportunity-assistant"
version = "0.1.0"
description = "営業オポチュニティマネジメント AIアシスタント"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.95.0"
uvicorn = "0.21.1"
sqlmodel = "0.0.8"
psycopg2-binary = "2.9.6"
slack-sdk = "3.20.2"
apscheduler = "3.10.1"
python-dotenv = "1.0.0"
openai = "0.27.4"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
black = "23.3.0"
isort = "5.12.0"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", ".pytest_cache", "venv"]