[tool.poetry]
name = "ai-opportunity-assistant"
version = "0.1.0"
description = "営業オポチュニティマネジメント AIアシスタント"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
lint = "scripts.lint:run_all_linters"
lint-imports = "scripts.lint:run_import_linter"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.95.0"
uvicorn = "0.21.1"
httpx = "0.24.0"
sqlmodel = "0.0.8"
psycopg2-binary = "2.9.6"
slack-sdk = "3.20.2"
apscheduler = "3.10.1"
python-dotenv = "1.0.0"
openai = "0.27.4"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-asyncio = "0.21.0"
pytest-mock = "3.10.0"
black = "23.3.0"
isort = "5.12.0"
flake8 = "6.0.0"
import-linter = "^2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", ".pytest_cache", "venv"]

[tool.importlinter]
root_package = "src"

[[tool.importlinter.contracts]]
name = "APIからSlack直依存禁止"
type = "forbidden"
source_modules = ["src.api"]
forbidden_modules = ["src.slack"]

[[tool.importlinter.contracts]]
name = "APIからDB直依存禁止"
type = "forbidden"
source_modules = ["src.api"]
forbidden_modules = ["src.db"]

[[tool.importlinter.contracts]]
name = "APIからAgents直依存禁止"
type = "forbidden"
source_modules = ["src.api"]
forbidden_modules = ["src.agents"]

[[tool.importlinter.contracts]]
name = "APIからScheduler直依存禁止"
type = "forbidden"
source_modules = ["src.api"]
forbidden_modules = ["src.scheduler"]

[[tool.importlinter.contracts]]
name = "SlackからServices, DB, Agents, Scheduler直依存禁止"
type = "forbidden"
source_modules = ["src.slack"]
forbidden_modules = ["src.services", "src.db", "src.agents", "src.scheduler"]

[[tool.importlinter.contracts]]
name = "ServicesからAPI, Scheduler直依存禁止"
type = "forbidden"
source_modules = ["src.services"]
forbidden_modules = ["src.api", "src.scheduler"]

[[tool.importlinter.contracts]]
name = "SchedulerからAPI, Slack, DB, Agents直依存禁止"
type = "forbidden"
source_modules = ["src.scheduler"]
forbidden_modules = ["src.api", "src.slack", "src.db", "src.agents"]

[[tool.importlinter.contracts]]
name = "DBから他モジュール依存禁止"
type = "forbidden"
source_modules = ["src.db"]
forbidden_modules = ["src.api", "src.services", "src.agents", "src.slack", "src.scheduler"]

[[tool.importlinter.contracts]]
name = "Agentsから他モジュール依存禁止"
type = "forbidden"
source_modules = ["src.agents"]
forbidden_modules = ["src.api", "src.services", "src.db", "src.slack", "src.scheduler"]